reasoning_transformations/ClassEval/Transformations/logs/ClassEval_62.log
STARTING AT 2024-10-15 02:10:34.014887
[START] processing file: ClassEval_62
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 0.000s

OK

Result: ['tests_pass']
tests_pass ClassEval_62 /home/yang/Benchmark/dataset/classeval/code//ClassEval_62.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: ClassEval_62
  File "/home/yang/Benchmark/.tmp_test/tmp_test.py", line 15
    nonlocal string_split
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'string_split' found

Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_decorator
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation add_datetime
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation add_time
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 2.406s

OK

Result: ['tests_pass']
Checking transformation add_http
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 2.406s

OK

Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 2.415s

OK

Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 2.413s

OK

Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 2.417s

OK

Result: ['tests_pass']
The file 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_62.py' has been formatted successfully.
Checking reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_62.py
*Running tests for: ClassEval_62
...........
----------------------------------------------------------------------
Ran 11 tests in 2.418s

OK

Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_decorator',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_62.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/classeval/',
  'exception': None,
  'file_id': 'ClassEval_62',
  'genetic_algorithm': None,
  'original_code': 'class NLPDataProcessor:\n'
                   '\n'
                   '    def construct_stop_word_list(self):\n'
                   "        stop_word_list = ['a', 'an', 'the']\n"
                   '        return stop_word_list\n'
                   '\n'
                   '    def remove_stop_words(self, string_list, '
                   'stop_word_list):\n'
                   '        answer = []\n'
                   '        for string in string_list:\n'
                   '            string_split = string.split()\n'
                   '            for word in string_split:\n'
                   '                if word in stop_word_list:\n'
                   '                    string_split.remove(word)\n'
                   '            answer.append(string_split)\n'
                   '        return answer\n'
                   '\n'
                   '    def process(self, string_list):\n'
                   '        stop_word_list = self.construct_stop_word_list()\n'
                   '        words_list = self.remove_stop_words(string_list, '
                   'stop_word_list)\n'
                   '        return words_list',
  'patch_path': 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_62.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/classeval/code//ClassEval_62.py',
  'target_file': 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_62.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 18.758997,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    shuffle([7, 21, 88])\n'
                      "    base64.b64encode(b'78673740229236664476')\n"
                      '    datetime.datetime.now()\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      'class NLPDataProcessor:\n'
                      '\n'
                      '    @my_decorator\n'
                      '    def construct_stop_word_list(self):\n'
                      '        Fernet.generate_key()\n'
                      "        stop_word_list = [['a', 'an', 'the']][0]\n"
                      '        return stop_word_list\n'
                      '\n'
                      '    def remove_stop_words(self, string_list, '
                      'stop_word_list):\n'
                      '        answer = []\n'
                      "        parse('2024-10-15 02:10:46')\n"
                      '        LoopChecker19 = 598\n'
                      '        time.sleep(0.24)\n'
                      "        HTTPConnection('google.com', port=80)\n"
                      '        LoopChecker29 = 597\n'
                      '        ConditionChecker115 = 782\n'
                      '        ConditionChecker215 = 253\n'
                      '        for LoopIndexOut in range(LoopChecker19 // '
                      'LoopChecker29):\n'
                      '            for string in string_list:\n'
                      '                string_split = string.split()\n'
                      '                for word in string_split:\n'
                      '                    if ConditionChecker115 & '
                      'ConditionChecker215:\n'
                      '                        if word in stop_word_list:\n'
                      '                            string_split.remove(word)\n'
                      '                answer.append(string_split)\n'
                      '        else:\n'
                      '            pass\n'
                      '        return answer\n'
                      '\n'
                      '    def process(self, string_list):\n'
                      '        stop_word_list = '
                      'self.construct_stop_word_list()\n'
                      '        ttest_ind([43, 65, 96], [52, 69, 80])\n'
                      '        newwords_list_1 = '
                      'self.remove_stop_words(string_list, stop_word_list)\n'
                      '        return newwords_list_1'}
[END] processing file: ClassEval_62. Total Time: 18.758997
END AT 2024-10-15 02:10:52.776781
